Add SVM, Lasso and XGBoost

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\I\\AppData\\Local\\Temp\\ipykernel_13604\\2987393687.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +21,10 @@
     "from sklearn.ensemble import BaggingRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import math"
+    "import math\n",
+    "from sklearn.svm import SVR\n",
+    "import xgboost as xgb\n",
+    "from sklearn.linear_model import Lasso"
    ]
   },
   {
@@ -71,19 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a10d3551-3b75-4904-8a01-82ab51a1bb32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Korisnik\\AppData\\Local\\Temp\\ipykernel_8740\\1441606978.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df.flight_class = df.flight_class.replace({'Economy' : 1,'Business' :2})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pandas.read_csv('Clean_Dataset.csv')\n",
     "columns_to_drop = ['Unnamed: 0', 'flight']\n",
@@ -819,6 +798,371 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4e57566-9018-4cf6-8ce2-a514031bbc44",
+   "metadata": {},
+   "source": [
+    "## SVM Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "370a62de-e193-4938-84dd-4105e49f8735",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 51650167.53273776\n",
+      "Root Mean Squared Error (RMSE): 7186.805099120037\n",
+      "Mean Absolute Error (MAE): 4276.208445676003\n"
+     ]
+    }
+   ],
+   "source": [
+    "svr = SVR(kernel='linear', C=100, epsilon=0.3, gamma='scale')\n",
+    "\n",
+    "# param_grid = {\n",
+    "#     'kernel': ['linear', 'poly', 'rbf'],  \n",
+    "#     'C': [0.1, 1, 10],\n",
+    "#     'gamma': ['scale', 'auto'],\n",
+    "#     'epsilon': [0.1, 0.2, 0.3]\n",
+    "# }\n",
+    "\n",
+    "# grid_search = GridSearchCV(estimator=svr, param_grid=param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "# grid_search.fit(X_train, y_train)\n",
+    "# best_svr = grid_search.best_estimator_\n",
+    "\n",
+    "svr.fit(X_train, y_train)\n",
+    "y_pred = svr.predict(X_test)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43cb2ee4-645b-4cda-86c4-dce040624e70",
+   "metadata": {},
+   "source": [
+    "## SVM Regression - economy class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "222ed69c-910f-4b23-950f-b8bdb7562c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 8645721.552161017\n",
+      "Root Mean Squared Error (RMSE): 2940.360786053476\n",
+      "Mean Absolute Error (MAE): 1999.786528401832\n"
+     ]
+    }
+   ],
+   "source": [
+    "svr = SVR(kernel='linear', C=100, epsilon=0.3, gamma='scale')\n",
+    "\n",
+    "svr.fit(X_train_economy, y_train_economy)\n",
+    "y_pred_economy = svr.predict(X_test_economy)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_economy, y_pred_economy)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_economy, y_pred_economy)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c6df82d-5f09-4177-88ad-4d77490ba0ed",
+   "metadata": {},
+   "source": [
+    "## SVM Regression - business class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "77cea65f-055e-4016-a9cb-7b03fd9342f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 95282822.70954612\n",
+      "Root Mean Squared Error (RMSE): 9761.292061481723\n",
+      "Mean Absolute Error (MAE): 7354.831906016623\n"
+     ]
+    }
+   ],
+   "source": [
+    "svr = SVR(kernel='linear', C=100, epsilon=0.3, gamma='scale')\n",
+    "\n",
+    "svr.fit(X_train_business, y_train_business)\n",
+    "y_pred_business = svr.predict(X_test_business)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_business, y_pred_business)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_business, y_pred_business)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf2edb2-e7c2-4330-90c5-f4567c29189e",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6a8fb33f-5f5b-4e55-bbb3-97588cb4df8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 48223067.00276563\n",
+      "Root Mean Squared Error (RMSE): 6944.283044545753\n",
+      "Mean Absolute Error (MAE): 4635.835076771084\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = Lasso(alpha=0.1)\n",
+    "\n",
+    "lasso.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lasso.predict(X_test)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa70979-954c-4ee9-b266-aadc62150e60",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression - economy class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "38721a6e-8bd2-4f0f-ae8c-88047f01735b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 8169476.536223177\n",
+      "Root Mean Squared Error (RMSE): 2858.2296157277456\n",
+      "Mean Absolute Error (MAE): 2066.203967260005\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = Lasso(alpha=0.1)\n",
+    "\n",
+    "lasso.fit(X_train_economy, y_train_economy)\n",
+    "\n",
+    "y_pred_economy = lasso.predict(X_test_economy)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_economy, y_pred_economy)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_economy, y_pred_economy)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfac2174-9ba4-45fc-9e9e-23086589241f",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression - business class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ba65bb75-b5fe-40c7-b1c4-fd0fec19e84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 94354691.91864127\n",
+      "Root Mean Squared Error (RMSE): 9713.634331116304\n",
+      "Mean Absolute Error (MAE): 7375.977990869461\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso = Lasso(alpha=0.1)\n",
+    "\n",
+    "lasso.fit(X_train_business, y_train_business)\n",
+    "\n",
+    "y_pred_business = lasso.predict(X_test_business)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_business, y_pred_business)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_business, y_pred_business)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dccdbe3-4985-4868-a535-ee4470c612f3",
+   "metadata": {},
+   "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84ce055b-6c80-4d1f-adc2-c0b15e81ae48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 21403580.13668307\n",
+      "Root Mean Squared Error (RMSE): 4626.400343321259\n",
+      "Mean Absolute Error (MAE): 2784.7580908376854\n"
+     ]
+    }
+   ],
+   "source": [
+    "XGB = xgb.XGBRegressor(objective ='reg:squarederror', n_estimators = 10, seed = 42)\n",
+    "\n",
+    "XGB.fit(X_train, y_train)\n",
+    "y_pred = XGB.predict(X_test)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "542468bc-bc46-4ef4-a814-3d2981f376d4",
+   "metadata": {},
+   "source": [
+    "## XGBoost - economy class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "514a6dad-4ce9-4a78-a0f2-3617658c0aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 4050836.9119947217\n",
+      "Root Mean Squared Error (RMSE): 2012.6691014656935\n",
+      "Mean Absolute Error (MAE): 1275.0522320177695\n"
+     ]
+    }
+   ],
+   "source": [
+    "XGB = xgb.XGBRegressor(objective ='reg:squarederror', n_estimators = 10, seed = 42)\n",
+    "\n",
+    "XGB.fit(X_train_economy, y_train_economy)\n",
+    "y_pred_economy = XGB.predict(X_test_economy)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_economy, y_pred_economy)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_economy, y_pred_economy)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "526a8817-3002-469f-8356-714a5bb450cf",
+   "metadata": {},
+   "source": [
+    "## XGBoost - business class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2dc2ede7-4533-493d-ae7b-951831d006cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 53399375.063616574\n",
+      "Root Mean Squared Error (RMSE): 7307.487602700163\n",
+      "Mean Absolute Error (MAE): 5407.51416770618\n"
+     ]
+    }
+   ],
+   "source": [
+    "XGB = xgb.XGBRegressor(objective ='reg:squarederror', n_estimators = 10, seed = 42)\n",
+    "\n",
+    "XGB.fit(X_train_business, y_train_business)\n",
+    "y_pred_business = XGB.predict(X_test_business)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_business, y_pred_business)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_business, y_pred_business)\n",
+    "\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\"Root Mean Squared Error (RMSE):\", rmse)\n",
+    "print(\"Mean Absolute Error (MAE):\", mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5eec18f6-bef3-4a8d-8eb1-5e5ccfe77c62",
    "metadata": {},
    "source": [
@@ -827,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "6213b294-de87-4abe-860e-3f3486397a02",
    "metadata": {},
    "outputs": [
@@ -840,17 +1184,17 @@
       "          Random Forest  7311588  2703 1070\n",
       "  Multilayer Perceptron 19842597  4454 2627\n",
       "Bagging Regression Tree  7295633  2701 1145\n",
-      "         SVM Regression        0     0    0\n",
-      "       Lasso Regression        0     0    0\n",
-      "                XGBoost        0     0    0\n"
+      "         SVM Regression 51650167  7186 4276\n",
+      "       Lasso Regression 48223067  6944 4635\n",
+      "                XGBoost 21403580  4626 2784\n"
      ]
     }
    ],
    "source": [
     "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
-    "         'MSE':[8168976, 7311588, 19842597, 7295633,0,0,0],\n",
-    "         'RMSE':[2858, 2703, 4454, 2701,0,0,0],\n",
-    "               'MAE':[2065, 1070, 2627, 1145,0,0,0]}\n",
+    "         'MSE':[8168976, 7311588, 19842597, 7295633,51650167,48223067,21403580],\n",
+    "         'RMSE':[2858, 2703, 4454, 2701,7186,6944,4626],\n",
+    "               'MAE':[2065, 1070, 2627, 1145,4276,4635,2784]}\n",
     "dataframe = pandas.DataFrame(data)\n",
     "print(dataframe.to_string(index=False))"
    ]
@@ -865,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a22c0353-3cd1-4654-ac94-83e5c385db12",
    "metadata": {},
    "outputs": [
@@ -878,17 +1222,17 @@
       "          Random Forest 18960993  4354 2059\n",
       "  Multilayer Perceptron 85973699  9272 6884\n",
       "Bagging Regression Tree 18615411  4314 2161\n",
-      "         SVM Regression        0     0    0\n",
-      "       Lasso Regression        0     0    0\n",
-      "                XGBoost        0     0    0\n"
+      "         SVM Regression 95282822  9761 7354\n",
+      "       Lasso Regression 94354691  9713 7375\n",
+      "                XGBoost 53399375  7307 5407\n"
      ]
     }
    ],
    "source": [
     "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
-    "         'MSE':[94337423, 18960993, 85973699, 18615411,0,0,0],\n",
-    "         'RMSE':[9712, 4354, 9272, 4314,0,0,0],\n",
-    "         'MAE':[7376, 2059, 6884, 2161,0,0,0]}\n",
+    "         'MSE':[94337423, 18960993, 85973699, 18615411,95282822,94354691,53399375],\n",
+    "         'RMSE':[9712, 4354, 9272, 4314,9761,9713,7307],\n",
+    "         'MAE':[7376, 2059, 6884, 2161,7354,7375,5407]}\n",
     "dataframe = pandas.DataFrame(data)\n",
     "print(dataframe.to_string(index=False))"
    ]
@@ -916,17 +1260,17 @@
       "          Random Forest 1908115  1381  614\n",
       "  Multilayer Perceptron 5618096  2370 1623\n",
       "Bagging Regression Tree 2028511  1424  627\n",
-      "         SVM Regression       0     0    0\n",
-      "       Lasso Regression       0     0    0\n",
-      "                XGBoost       0     0    0\n"
+      "         SVM Regression 8645721  2940 1999\n",
+      "       Lasso Regression 8169476  2858 2066\n",
+      "                XGBoost 4050836  2012 1275\n"
      ]
     }
    ],
    "source": [
     "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
-    "         'MSE':[8168976, 1908115, 5618096, 2028511,0,0,0],\n",
-    "         'RMSE':[2858, 1381, 2370, 1424,0,0,0],\n",
-    "         'MAE':[2065, 614, 1623, 627,0,0,0]}\n",
+    "         'MSE':[8168976, 1908115, 5618096, 2028511,8645721,8169476,4050836],\n",
+    "         'RMSE':[2858, 1381, 2370, 1424,2940,2858,2012],\n",
+    "         'MAE':[2065, 614, 1623, 627,1999,2066,1275]}\n",
     "dataframe = pandas.DataFrame(data)\n",
     "print(dataframe.to_string(index=False))"
    ]
@@ -956,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
